--- a/public/assets/scss/layout/_header.scss
+++ b/public/assets/scss/layout/_header.scss
@@ -468,112 +468,6 @@
         }
       }
     }
-
-    // .main-menu {
-    //   z-index: 99;
-    //   position: relative;
-    //   display: flex;
-    //   justify-content: end;
-    //   padding-right: 60px;
-    //   nav {
-    //     display: block;
-    //     ul {
-    //       list-style: none;
-
-    //       li {
-    //         display: inline-block;
-    //         margin-right: 25px;
-    //         position: relative;
-    //         a {
-    //           color: var(--common-white);
-    //           font-family: var(--ff-p);
-    //           font-weight: var(--fw-600);
-    //           font-size: 14px;
-    //           line-height: 20px;
-    //           padding: 22px 0;
-    //           display: inline-block;
-    //           @include transition(0.3s);
-    //           &:hover {
-    //             color: var(--theme-1);
-    //           }
-    //         }
-    //         &.active {
-    //           a {
-    //             color: var(--theme-1);
-    //           }
-    //         }
-    //         &.has-dropdown {
-    //           a {
-    //             padding-right: 14px;
-    //             &::after {
-    //               position: absolute;
-    //               content: "\f107";
-    //               right: -4px;
-    //               top: 22px;
-    //               font-size: 16px;
-    //               color: var(--common-white);
-    //               font-family: "Font Awesome 6 Pro";
-    //             }
-    //             &:hover {
-    //               color: var(--theme-1);
-    //               &::after {
-    //                 color: var(--theme-1);
-    //               }
-    //             }
-    //           }
-    //           ul.sub-menu {
-    //             position: absolute;
-    //             left: 0;
-    //             top: 115%;
-    //             min-width: 200px;
-    //             background-color: var(--common-white);
-    //             opacity: 0;
-    //             visibility: hidden;
-    //             z-index: 99;
-    //             -webkit-box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.16);
-    //             box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.16);
-    //             @include transition(0.2s);
-
-    //             li {
-    //               margin: 0;
-    //               padding: 0;
-    //               position: relative;
-    //               width: 100%;
-    //               display: block;
-    //               @include transition(0.2s);
-    //               a {
-    //                 padding-right: 16px;
-    //                 position: relative;
-    //                 display: block;
-    //                 padding: 6px 25px;
-    //                 @include transition(0.2s);
-    //                 color: var(--text-h);
-    //                 text-transform: capitalize;
-    //                 &::after {
-    //                   display: none;
-    //                 }
-    //               }
-    //               &:hover,
-    //               &.active {
-    //                 background: var(--theme-1);
-    //                 a {
-    //                   color: var(--common-white);
-    //                 }
-    //               }
-    //             }
-    //           }
-    //         }
-    //         &:hover {
-    //           ul.sub-menu {
-    //             opacity: 1;
-    //             visibility: visible;
-    //             top: 90%;
-    //           }
-    //         }
-    //       }
-    //     }
-    //   }
-    // }
   }
 }
 
@@ -583,30 +477,28 @@
     & > li {
       &.menu-item-has-children {
         & > .sub-menu {
-          height: 0;
-          visibility: hidden;
-          opacity: 0;
-          transition: 0.3s;
+          max-height: 0;
+          overflow: hidden;
+          transition: all 0.5s ease-in-out;
+          li a {
+            padding-left: 20px;
+
+            display: block;
+            width: 100%;
+            color: var(--text_color);
+            border-top: 1px solid #ebebeb;
+            font-size: 14px;
+            line-height: 1.5;
+            font-weight: 700;
+            text-transform: uppercase;
+          }
         }
 
         &.active {
           & > .sub-menu {
-            height: 100%;
-            visibility: visible;
-            opacity: 1;
-
-            li a {
-              padding-left: 20px;
-
-              display: block;
-              width: 100%;
-              color: var(--text_color);
-              border-top: 1px solid #ebebeb;
-              font-size: 14px;
-              line-height: 1.5;
-              font-weight: 700;
-              text-transform: uppercase;
-            }
+            max-height: 1000px;
+            transition: all 0.5s ease-in-out;
+           
           }
         }
       }
