--- a/Master/public/assets/scss/components/_theme.scss
+++ b/Master/public/assets/scss/components/_theme.scss
@@ -49,7 +49,8 @@
 /*  01. THEME DEFAULT CSS START
 /*----------------------------------------*/
 
-@import url($font-url);
+// @import url($font-url);
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Orbitron:wght@400..900&display=swap");
 
 * {
   margin: 0;
@@ -71,6 +72,7 @@ body {
   font-weight: normal;
   color: var(--text-p-2);
   line-height: 26px;
+  font-variation-settings: "wdth" 100, "YTLC" 500;
 }
 
 a {
@@ -83,12 +85,18 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: var(--ff-heading);
-  color: var(--common-white);
-  margin-top: 0px;
-  font-weight: var(--fw-700);
-  line-height: 1.4;
-  @include transition(0.3s);
+  // font-family: var(--ff-heading);
+  // color: var(--common-white);
+  // margin-top: 0px;
+  // font-weight: var(--fw-700);
+  // line-height: 1.4;
+  // font-optical-sizing: auto;
+  // font-style: normal;
+  // @include transition(0.3s);
+  font-family: "Orbitron", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
 }
 
 h1 {
